# weread-link-notion

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
assets/: heatmap.json  monthly-reading.json  reading-profile.json
docs/: AUDIT.md  GET_SECRETS.md  NOTION_LAYOUT.md  SETUP.md  TROUBLESHOOTING.md  notion-template-preview.html
scripts/: setup_secrets.py
weread_link_notion/: __init__.py  cli.py  config.py  heatmap.py  monthly.py  notion.py  profile.py  sync.py  utils.py  weread.py
